# kf_wgins

./: CMakeLists.txt  README.md  README_CN.md
scripts/: draw.py
src/: kf_wgins.cc
src/common/: angle.h  eigen_types.h  math_utils.h  nav_state.h  types.h
src/kf-gins/: gi_engine.cpp  gi_engine.h  kf_gins_types.h
src/wgins/: StaticIMUInit.cc  StaticIMUInit.h  eskf.h  utm_convert.cc  utm_convert.h  wgi_engine.cc  wgi_engine.h
